# gnome-builder

./: configure.ac  meson_options.txt
plugins/: Makefile.am  meson.build
plugins/snap/: Makefile.am  configure.ac  gbp-snap-build-system.c  gbp-snap-build-system.h  gbp-snap-pipeline-addin.c  gbp-snap-pipeline-addin.h  gbp-snap-plugin.c  gbp-snap-resources.gresource.xml  gbp-snap-utils.c  gbp-snap-utils.h  gbp-snap-workbench-addin.h  snap.plugin
plugins/snapcraft/: gbp-snap-build-stage.c  gbp-snap-build-stage.h  gbp-snap-pipeline-addin.c  gbp-snap-plugin.c  gbp-snap-resources.gresource.xml  gbp-snap-utils.c  gbp-snap-workbench-addin.c  meson.build  snapcraft.plugin
plugins/snapcraft/gtk/: menus.ui
